--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-table": "^7.8.0",
     "react-window": "^1.8.10",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.1",
